deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-varnish-teste
  namespace: teste-varnish
spec:
  selector:
    matchLabels:
      app: varnish-teste
  template:
    metadata:
      labels:
        app: varnish-teste
    spec:
      volumes: #Declare the volume, in this case will be use a Secret
        - name: varnish-config
          secret:
            secretName: varnish-config-secret #Name of the Secret that will be use
      containers:
      - name: varnish-teste
        image: varnish:7.2.1        
        #Define POD execution privilegy, exclude permission error on port 80 in varnish
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.5m"
          limits:
            memory: "256Mi"
            cpu: "1m"
        ports:
        - containerPort: 80
        volumeMounts: #Set the volumn that will be use
          - name: varnish-config
            mountPath: "/etc/varnish/" #Map where the volumn will be mount inside the POD
