service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-varnish-teste
  namespace: teste-varnish
spec:
  selector:
    app: varnish-teste
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
