ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-varnish-teste
  namespace: varnish-teste
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: testevarnish.ucommerce.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-varnish-teste
              port:
                number: 80
