ingressroute-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressroute-varnish-teste
  namespace: varnish-teste
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: testevarnish.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-varnish-teste
                port:
                  number: 80
